--- a/Cinestar-app/CityPickerPage.xaml
+++ b/Cinestar-app/CityPickerPage.xaml
@@ -6,22 +6,17 @@
              Title="Izaberi grad">
 
     <ScrollView>
-        <StackLayout Padding="20" Spacing="20">
-
-            <!-- Logo -->
-            <Image Source="logo.png"
-                   HeightRequest="90"
-                   HorizontalOptions="Start"
-                   Margin="0,20"/>
-
-            <!-- Naslov -->
+        <StackLayout  Spacing="20">
+            <Image HorizontalOptions="Center" Source="logo.png"
+                   HeightRequest="90" 
+                   Margin="0,20,0,10"/>
             <Label Text="ODABERI GRAD:"
                    TextColor="White"
-                   FontSize="22"
+                   FontSize="20"
                    FontAttributes="Bold"
-                   HorizontalOptions="Start"/>
-
-            <!-- Lista gradova -->
+                   CharacterSpacing="0.8"
+                   TextDecorations="Underline"
+                   HorizontalOptions="Center"/>
             <ListView x:Name="CitiesListView"
                       BackgroundColor="Transparent"
                       SeparatorVisibility="None"
@@ -31,13 +26,15 @@
                         <ViewCell>
                             <StackLayout>
                                 <BoxView HeightRequest="1"
-                                         Color="#051851"
+                                         Color="#3e3e57"
+                                         Margin="0,5,0,5"
                                          HorizontalOptions="FillAndExpand"/>
                                 <Label Text="{Binding .}"
                                        FontSize="20"
-                                       FontAttributes="Bold"
                                        TextColor="White"
-                                       HorizontalOptions="Start"
+                                       HorizontalOptions="Center"
+                                       VerticalOptions="Center"
+                                       TextTransform="Uppercase"
                                        Padding="0,10"/>
                             </StackLayout>
                         </ViewCell>
