--- a/Cinestar-app/MainTabbedPage.xaml
+++ b/Cinestar-app/MainTabbedPage.xaml
@@ -3,6 +3,8 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="Cinestar_app.MainTabbedPage"
+     xmlns:android="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.AndroidSpecific;assembly=Microsoft.Maui.Controls"
+    android:TabbedPage.ToolbarPlacement="Bottom"
     BarBackgroundColor="#051851"
     BarTextColor="White">
 </TabbedPage>
