--- a/Cinestar-app/RegistracijaPage.xaml
+++ b/Cinestar-app/RegistracijaPage.xaml
@@ -2,7 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Cinestar_app.RegistracijaPage"
              BackgroundColor="#051851"
-             Title="Registracija">
+             Title="">
 
     <ScrollView>
         <VerticalStackLayout Padding="20" Spacing="15">
